oss-knowledge-gitops/backend/task-planner/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: task-planner
spec:
    rules:
        - host: oss-knowledge-task-planner-dev.4.230.158.187.nip.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: dev-task-planner
                            port:
                                number: 8004
